--- a/Debricked.csproj
+++ b/Debricked.csproj
@@ -175,10 +175,16 @@
     <PackageReference Include="Community.VisualStudio.Toolkit.17">
       <Version>17.0.507</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.SDK" Version="17.8.37222" ExcludeAssets="runtime">
-      <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces">
+      <Version>8.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.SDK">
+      <Version>17.0.31902.203</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="17.8.2365" />
+    <PackageReference Include="System.Text.Json">
+      <Version>7.0.4</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Page Include="toolwindows\Dialogs\CredentialPromptWindow.xaml">
